name:                nmis-parser
version:             0.1.0.0
synopsis:            Parser for NMIS files
description:         Parses the NMIS files to ADT which you can use to manupulate data further
homepage:            https://github.com/v0d1ch/nmis-parser#readme
license:             BSD3
license-file:        LICENSE
author:              Sasa Bogicevic
maintainer:          brutallesale@gmail.com
copyright:           2017 Sasa Bogicevic
category:            Text, Parsers
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Text.Nmis
                     , Text.Helper
                     , Text.NmisTypes
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , megaparsec
  default-language:    Haskell2010


test-suite nmis-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Nmis
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/v0d1ch/nmis-parser
