name:                nmis-parser
version:             0.2.0.0
synopsis:            NMIS file parser
homepage:            https://github.com/v0d1ch/nmis-parser#readme
license:             BSD3
license-file:        LICENSE
author:              Sasa Bogicevic
maintainer:          t4nt0r@pm.me
copyright:           2019 Sasa Bogicevic
category:            Text, Parsers
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

description:
     Parser for __NMIS__ (Network Management Information System) files to record type. Main module to use is __Text.Nmis__ and __parseNmis__ function

library
  hs-source-dirs:      src
  exposed-modules:     Text.Nmis
                     , Text.Internal.StringCombinators
                     , Text.Internal.NmisTypes
                     , Text.Internal.NmisInternal
  build-depends:       base
                     , universum
                     , megaparsec
  default-language:    Haskell2010
  default-extensions: NoImplicitPrelude OverloadedStrings RecordWildCards LambdaCase MultiWayIf
  ghc-options:         -Wall -fwarn-redundant-constraints -fwarn-unused-matches -fwarn-unused-imports

test-suite nmis-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       universum
                     , Nmis
  ghc-options:         -Wall -fwarn-redundant-constraints -fwarn-unused-matches -fwarn-unused-imports
  default-language:    Haskell2010
  default-extensions: NoImplicitPrelude OverloadedStrings RecordWildCards LambdaCase MultiWayIf

source-repository head
  type:     git
  location: https://github.com/v0d1ch/nmis-parser
